# FinRAG-Eval

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dataset_build.yaml  full.yaml  smoke.yaml
datasets/benchmark/: documents.jsonl  qa_examples.jsonl
datasets/sample/: chunks.jsonl  documents.jsonl  qa_examples.jsonl
docs/: architecture.md  dataset-schema.md  eval-methodology.md  leaderboard.md
docs/superpowers/plans/: 2026-04-03-finrag-eval-mvp.md  2026-04-04-real-financial-qa-dataset.md
docs/superpowers/specs/: 2026-04-03-finrag-eval-mvp-design.md  2026-04-04-real-financial-qa-dataset-design.md
ingest/: chunker.py
scripts/: build_dataset.py
src/cli/: run_eval.py  summarize_run.py
src/common/: config.py  models.py  registry.py
src/evaluators/: answer.py  citation.py  faithfulness.py  latency.py  runner.py
src/generation/: azure_openai.py  base.py
src/ingest/: chunker.py  dataset_builder.py  qa_generator.py  sec_fetch.py  text_extract.py
src/leaderboard/: artifacts.py  summary.py
src/retrieval/: bm25.py
tests/: test_answer.py  test_artifacts.py  test_bm25.py  test_chunker.py  test_citation.py  test_dataset_builder.py  test_faithfulness.py  test_golden.py  test_latency.py  test_models.py  test_qa_generator.py  test_summary.py  test_text_extract.py
tests/fixtures/: golden_run.json  sample_candidates.jsonl
