[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finrag-eval"
version = "0.1.0"
description = "Open source benchmark and evaluation harness for financial RAG systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Vikas" }
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10"
]
azure = [
  "openai>=1.40"
]

[project.scripts]
finrag-run = "src.cli.run_eval:app"
finrag-summarize = "src.cli.summarize_run:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
